--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,8 @@
 title: Nocnitsa
-description: Black magic code
+tagline: Black magic code
+description: >-
+  Ancient magic chanted in form of lines of codes.
+  Sometimes, I include cats.
 url: http://nocnitsa.com
 author:
   name: Gabriel de Oliveira
