--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Nocnitsa
 tagline: Black magic code
 description: >-
   Ancient magic chanted in form of lines of codes.
-  Sometimes, I include cats.
+  I also like cats.
 url: http://nocnitsa.com
 author:
   name: Gabriel de Oliveira
